# WaterSN

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp  note.txt  prompt.txt  resources.qrc  test_auth_main.cpp  watersn.cpp  watersn.h  watersn.ui
auto-db-deployer/: CMakeLists.txt  README.md  package.json
auto-db-deployer/src/: main.cpp
auto-db-deployer/src/database/: dbmanager.cpp  init.sql
auto-db-deployer/src/platform/: linux.cpp  macos.cpp  windows.cpp
auto-db-deployer/src/utils/: fileutils.cpp
controller/: controller.cpp
data/: WaterSN_schema.sql
icons/material/: README.txt
include/: pch.h
include/controller/: controller.h
include/model/: model.h
include/utils/: bcryptutils.h  databasemanager.h  defaultusermanager.h
include/widgets/: abonnementformdialog.h  abonnementwidget.h  actionsdelegate.h  authdialog.h  clientdetailwidget.h  clientformdialog.h  clientswidget.h  clientwidget.h  compteurformdialog.h  compteurwidget.h  dashboardchartwidget.h  dashboardwidget.h  facturationformdialog.h  factureactionsdelegate.h  factureformdialog.h  facturewidget.h  historiquewidget.h  logowidget.h  mapwidget.h  prelevementformdialog.h  prelevementwidget.h  resetpassworddialog.h  rolemanagerwidget.h
model/: model.cpp
utils/: alerte.cpp  alerte.h  auth.cpp  auth.h  bcryptutils.cpp  databasemanager.cpp  defaultusermanager.cpp  exporter.cpp  exporter.h  filtre.cpp  filtre.h  mail.cpp  mail.h
widgets/: abonnementformdialog.cpp  clientwidget.cpp  facturationformdialog.cpp  facturewidget.cpp  logowidget.cpp  mapwidget.cpp  prelevementformdialog.cpp  prelevementwidget.cpp
widgets/abonnement/: abonnementformdialog.cpp  abonnementwidget.cpp
widgets/auth/: authdialog.cpp  authdialog.qss  authdialog.ui  initdialog.qss  initdialog.ui  resetpassworddialog.cpp  resetpassworddialog.qss  rolemanagerwidget.cpp  ui_authdialog.h
widgets/client/: clientdetailwidget.cpp  clientformdialog.cpp  clientswidget.cpp  clientswidget_improved.cpp  clientwidget.cpp  factureactionsdelegate.cpp
widgets/compteur/: actionsdelegate.cpp  compteurformdialog.cpp  compteurwidget.cpp
widgets/dashboard/: dashboardchartwidget.cpp  dashboardwidget.cpp
widgets/facture/: factureformdialog.cpp  facturewidget.cpp
widgets/historique/: historiquewidget.cpp
